--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-   <meta charset="UTF-8">
-    <title>Liams App</title>
-    <link rel="stylesheet" href="app.css" type="text/css">
-  </head>
-  <body>
-    <div class="header">
-      <div class="imhold"><img alt="lo" id="poster" class="logiIm" src='/logo.png'></div>
-        <div class="navhold">
-        <div class="topnav">
-        <a href="/">Home</a>
-        <!--<a href="#" >Products</a>-->
-        <!--<a href="#"  >About</a>-->
-        <a href="/contacts">Show Contacts</a>
-  </div>
-</div>
-</div>
+<% include ../partials/header %>
 
 
 <div class="row">
@@ -44,11 +26,6 @@
     </div>
 
 
-<div class="footer">
-  <p>Liams Node.js Application</p>
-<p>Images from Pixabay.com</p>
-</div>
 
+<% include ../partials/footer %>
 
-    </body>
-</html>
