--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -1,54 +1,27 @@
-<!DOCTYPE html>
-<html>
-  <head>
-   <meta charset="UTF-8">
-    <title>Liams App</title>
-    <link rel="stylesheet" href="app.css" type="text/css">
-  </head>
-  <body>
-    <div class="header">
-      <div class="imhold"><img alt="lo" id="poster" class="logiIm" src='/logo.png'></div>
-        <div class="navhold">
-        <div class="topnav">
-        <a href="/">Home</a>
-        <a href="/contacts.html" >Show Contacts</a>
-        <a href="#"  >About</a>
-        <!--<a href="#">Academic Section</a>-->
-  </div>
-</div>
-</div>
+<% include ../partials/header %>
 
 
 <div class="row">
-            <div class="holder">
-    
-                  <div class="large">
-                  <h1>contacts page</h1>
-                  <h2>Accessories</h2>
-            </div>
-        
-    <div class="normal">
-        <h1>Swimming</h1>
-        <h2>Accessories</h2>
-        
-    </div>
-              
-    <div class="normal2">
-        <h1>Cycling</h1>
-        <h2>Accessories</h2>
-        
-    </div>
-    
-            </div>
-
+            <%= JSON.stringify(contact) %>
+       <br>
+       <h1>Welcome to the comments page</h1>
+       <br>
+        <div class="grid-container">
+       <% contact.forEach(function(contact) { %> 
+       
+      
+           <div class="item">
+               <h1 class="itemtitle">Id: <%= contact.id %></h1>
+               <p class="itemp">Name: <%= contact.name %></p>
+               <p class="itemp">Comment: <%= contact.comment %></p> 
+                <p class="itemp">Email: <%= contact.email %></p> 
+               
+           </div>
+      
+       
+       <% }); %>
+        </div>
     </div>
 
 
-<div class="footer">
-  <p>Liams Node.js Application</p>
-<p>Images from Pixabay.com</p>
-</div>
-
-
-    </body>
-</html>
+<% include ../partials/footer %>
