--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -2,7 +2,7 @@
 
 
 <div class="row">
-            <%= JSON.stringify(contact) %>
+           
        <br>
        <h1>Welcome to the comments page</h1>
        <br>
@@ -15,6 +15,25 @@
                <p class="itemp">Name: <%= contact.name %></p>
                <p class="itemp">Comment: <%= contact.comment %></p> 
                 <p class="itemp">Email: <%= contact.email %></p> 
+                <a href="/editcontact/<%= contact.id %>" class= "button">Edit</a>
+            
+                
+              <p class="button" id="doit<%= contact.id %>">Delete</p>
+              <p id="yes<%= contact.id %>" style="display:none">
+               Are you sure?
+              <a href="/deletecontact/<%= contact.id %>" class="button">Yes</a>
+              </p>
+             
+             <script>
+               $(document).ready(function(){
+                 $("#doit<%= contact.id %>").click(function(){
+                   $("#yes<%= contact.id %>").slideToggle(2000);
+                   
+                 })
+                 
+               })
+               
+             </script>
                
            </div>
       
