--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -3,7 +3,8 @@
   <head>
    <meta charset="UTF-8">
     <title>Gallery App</title>
-    <link rel="stylesheet" href="app.css" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="../app.css" type="text/css">
   </head>
   
   <body>
@@ -12,6 +13,9 @@
         <div class="navhold">
         <div class="topnav">
         <a href="/">Home</a>
+        <a href="#">Gallery</a>
+        <a href="#">Join</a>
+        <a href="#">About</a>
         <a href="/add">Contact Us</a>
         <a href="/contacts">Show Contacts</a>
         </div>
