--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,24 +4,12 @@
 <div class="row">
             <div class="holder">
     
-                  <div class="large">
-                  <h1>Running</h1>
+                  <div class="front">
+                  <h1>Welcome to galley studio</h1>
                   <h2>Accessories</h2>
             </div>
         
-    <div class="normal">
-        <h1>Swimming</h1>
-        <h2>Accessories</h2>
-        
-    </div>
-              
-    <div class="normal2">
-        <h1>Cycling</h1>
-        <h2>Accessories</h2>
-        
-    </div>
     
-            </div>
 
     </div>
 
