--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -16,8 +16,8 @@
         </div>
         <div class="topnav">
             <a href="/">Home</a>
-            <a href="/products">Art Display</a>
-            <a href="/about">Review</a>
+            <a href="/products">Art Exhibition</a>
+            <a href="/addreview">Review Site</a>
             <a href="/add">Contact Us</a>
            
         </div>
