--- a/views/addproduct.ejs
+++ b/views/addproduct.ejs
@@ -9,7 +9,7 @@
                     <input name="name" type="text" placeholder="Enter product name" />
                      
                     <label for="activity">Description</label>
-                    <input name="activity" type="text" placeholder="Enter Activity" />
+                    <input name="activity" type="text" placeholder="Enter activity" />
                    
                     <label for="price">Price</label> 
                     <input name="price" type="text" placeholder="Enter price" />
