--- a/views/products.ejs
+++ b/views/products.ejs
@@ -17,7 +17,7 @@
                         <h1 class="itemp">Name: <%= product.Name %></h1>
                         <p class="itemp">Description: <%= product.Activity %></p>
                         <p class="itemp">Price: €<%= product.Price %></p>
-                        <a href="/product/<%= product.Id %>" class="button">Review</a>
+                        <a href="/addreview" class="button">Review</a>
                         <a href="/editproduct/<%= product.Id %>" class="button">Edit</a>
             
                 
