--- a/style/app.css
+++ b/style/app.css
@@ -91,21 +91,16 @@ header{
 .row .navtext{
     /*font-family: 'Beth Ellen', cursive;*/
     padding-top: 1em;
-    color: #fff;
-    font-size: 2rem;
+    color: black;
+    font-size: 1.8rem;
 }
 .row h1{
     margin: .2em 0em;
+    padding: .2em 0em;
 }
 
 .front{
   min-height:550px;
-  /*background-color: black;*/
-  /*opacity: .5;*/
-  /*background: url('../images/showcase.jpg');*/
-  /*background-image: url("/frontbg.jpeg");*/
-  /*background-position: center;*/
-  /*background-size: 100%;*/
   text-align: center;
   color: #fff;
 
@@ -155,93 +150,6 @@ header{
     line-height: 1.5em;
 }
 
-/*.holder {*/
-/*    text-align: center;*/
-/*    width: 90%;*/
-/*    margin-left: auto;*/
-/*    margin-right: auto;*/
-/*}*/
-
-/*.large {*/
-/*    width: 55%;*/
-/*     background-image: url('/running.jpg');*/
-/*      background-repeat:no-repeat;*/
-/*    background-size:cover;*/
-/*    float: left;*/
-/*    padding:5px;*/
-/*    margin-left:10px;*/
-/*    height: 610px;*/
-/*}*/
-
-
-/*.large h1 {*/
-/*    margin-bottom: 2px;    */
-/*    font-size: 157px;*/
-/*    color: #ffffff;*/
-/*}*/
-
-
-/*.large h2 {*/
-/*    margin-top: 2px;*/
-/*    margin-bottom: 2px;*/
-/*    font-size: 157px;*/
-/*    color: #ffffff;*/
-/*}*/
-
-
-/*.normal h1 {*/
-/*    margin-bottom: 2px;    */
-/*    font-size: 87px;*/
-/*    color: #ffffff;*/
-/*}*/
-
-
-/*.normal h2 {*/
-/*    margin-top: 2px;*/
-/*    margin-bottom: 2px;*/
-/*    font-size: 87px;*/
-/*    color: #ffffff;*/
-/*}*/
-
-
-/*.normal2 h1 {*/
-/*    margin-bottom: 2px;    */
-/*    font-size: 87px;*/
-/*    color: #ffffff;*/
-/*}*/
-
-
-/*.normal2 h2 {*/
-/*    margin-top: 2px;*/
-/*    margin-bottom: 2px;*/
-/*    font-size: 87px;*/
-/*    color: #ffffff;*/
-/*}*/
-
-/*.normal {*/
-/*    width: 30%;*/
-/*     background-image: url('/swimming.jpg');*/
-/*      background-repeat:no-repeat;*/
-/*    background-size:cover;*/
-/*    float: left;*/
-/*     padding:5px;*/
-/*     height: 300px;*/
-/*     margin-left:10px;*/
-/*     margin-bottom:10px;*/
-/*}*/
-
-/*.normal2 {*/
-/*    width: 30%;*/
-/*     background-image: url('/cycling.jpg');*/
-/*      background-repeat:no-repeat;*/
-/*    background-size:cover;*/
-/*    float: left;*/
-/*     padding:5px;*/
-/*     height: 300px;*/
-/*     margin-left:10px;*/
-/*     margin-bottom:10px;*/
-/*}*/
-
 /* Style the footer */
 .footer {
     background-color: #938d80;
@@ -272,10 +180,13 @@ header{
   /*background-color: rgba(202, 131, 34, 0.8);*/
   background-color: #b0985e;
   text-align: center;
-  padding: 5px 0;
+  padding: .3em 0;
  
 }
 
+.item label{
+    padding: 5.5em 0em;
+}
 
 #itemsContainer {
     width: 100%;
@@ -333,7 +244,9 @@ header{
     background: #a33b0d;
 }
 
-
+p.showup{
+    display: none;
+}
 
 #itemsContainer h2 {
    display: block;
