--- a/views/addreview.ejs
+++ b/views/addreview.ejs
@@ -3,11 +3,13 @@
 
 <div class="row">
   <div class="contactsection">
-  <h1>Welcome to leave your review <br>
+      
+  <h1>Welcome to the review page<br></h1>
+  <h2>
    <div style="text-align: center; width: 100%; background-color: rgba(255, 255, 255, 0.8);text-align: center; margin-bottom: 10px;" >
         
        
-         <form accept-charset="UTF-8" style="display: inline-block; width: 90%;" action="/add" method="post">    
+         <form accept-charset="UTF-8" style="display: inline-block; width: 90%;" action="/addreview" method="post">    
                 <div class="item">
                   <label for="name">Name</label>
                     <input name="name" type="text" placeholder="Enter name" />
@@ -16,13 +18,15 @@
                    <label for="image">Email</label> 
                     <input name="email" type="text" placeholder="Enter email" />
                        <button class="button">Submit</button>
+                      
                   </div>
           </form>
           
          
     </div>
-  </h1>
-  
+    
+  </h2>
+  <a href="/reviews">See All Reviews</a>
   </div>
 </div>
 
