--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -4,8 +4,8 @@
 <div class="row">
            
        <br>
-       <h1>Welcome to the contact page</h1>
-       <p>D gallery is located in dublin city center, it was found in the late 1990s.</p>
+       <h1>Welcome to the contacts display page</h1>
+      
        <br>
         <div class="grid-container">
        <% contact.forEach(function(contact) { %> 
@@ -14,7 +14,7 @@
            <div class="item">
                <h1 class="itemtitle">Id: <%= contact.id %></h1>
                <p class="itemp">Name: <%= contact.name %></p>
-               <p class="itemp">Comment: <%= contact.comment %></p> 
+               <p class="itemp">Message: <%= contact.comment %></p> 
                 <p class="itemp">Email: <%= contact.email %></p> 
                 <a href="/editcontact/<%= contact.id %>" class= "button">Edit</a>
             
