--- a/views/add.ejs
+++ b/views/add.ejs
@@ -4,10 +4,11 @@
 <div class="row">
   <div class="contactsection">
   <h1>Welcome to contact us  <br></h1>
-  <p>D gallery is located in dublin city center, it was found in the late 1990s.<br>
+  <p>D gallery is located in dublin city center, it was established in the late 1990s.<br>
    <span class="button" id="show">Toggle to see information</span></p>
   <p class="showup">
-  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+   We are organizing many events and dedicated to bringing people and their art together. Would like more details about events or exhibitions or other? please leave your message below.
+   </p>
  <h2>
  
   <div style="text-align: center; width: 100%; background-color: rgba(255, 255, 255, 0.8);text-align: center; margin-bottom: 10px;" >
